[tool.poetry]
name = "conformal"
version = "0.1.0"
description = ""
authors = ["Ethan Rooke <ethan@roo.ke>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
